--- a/ControlAutomatizado/nbproject/project.properties
+++ b/ControlAutomatizado/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/ControlAutomatizado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.barbecue-1.5-beta1.jar=..\\..\\..\\..\\Downloads\\barbecue-1.5-beta1\\barbecue-1.5-beta1\\barbecue-1.5-beta1.jar
 file.reference.ojdbc6.jar=..\\..\\..\\..\\Downloads\\ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.barbecue-1.5-beta1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
